Closed Bug 146538 Opened 22 years ago Closed 22 years ago

browser may crash on startup if a plugin does not register any file extensions: GIB ActiveX Object (NPchargitplug.dll) may crash in [@ AddPluginInfoToRegistry] N700, branch

Categories

(Core Graveyard :: Plug-ins, defect, P3)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.2

People

(Reporter: sjakab, Assigned: peterl-bugs)

Details

(Keywords: crash, topcrash, Whiteboard: [PL2:NA] [adt2] [ETA 09/12])

Crash Data

Attachments

(2 files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.0rc2)
Gecko/20020510
BuildID:    2002051006

If I've opened the browser normally from my desktop link (homepage = blank), if
I then close it an try to open it from a link in my Outlook mail, it crashes. I
can then open it ok from Outlook. However, I can then not open it normally
without it crashing the first time.

If I've already got the browser open and I click on a link from Outlook, a new
browser window opens up with no problems, the crash only occurs when starting
the browser from scratch.

Reproducible: Always
Steps to Reproduce:
1. Open the browser from the desktop.
2. Close it.
3. Open the browser from a link in an Outlook email. The browser will crash.
4. Open via the Outlook link again. The browser will open ok.
5. Close the browser.
6. Open the browser from the desktop. It will crash.
7. Open the browser again. It will open ok.
When crashing, do you get a Talkback window popup ? If so, please post Talkback
ID for this crash by running 'mozilla\bin\components\talkback.exe'.
Severity: normal → critical
Keywords: crash, stackwanted
Some talkback ids submitted when this crash occured:

TB6605244E
TB6547364X
TB6546951H
TB6517288M
Incident ID 6605244
Stack Signature AddPluginInfoToRegistry 29256814
Email Address sjakab@soe.sony.com
Product ID Gecko1.0
Build ID 2002051008
Trigger Time 2002-05-23 14:59:13
Platform Win32
Operating System Windows NT 5.0 build 2195
Module gkplugin.dll
URL visited
User Comments
Trigger Reason Access violation
Source File Name
d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp
Trigger Line No. 5400
Stack Trace
AddPluginInfoToRegistry
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp, line
5400]
nsPluginHostImpl::CachePluginsInfo
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp, line
5599]
nsPluginHostImpl::FindPlugins
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp, line
5143]
nsPluginHostImpl::LoadPlugins
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp, line
4956]
nsPluginHostImpl::GetPluginFactory
[d:\builds\seamonkey\mozilla\modules\plugin\base\src\nsPluginHostImpl.cpp, line
4473]
nsJVMManager::StartupJVM
[d:\builds\seamonkey\mozilla\modules\oji\src\nsJVMManager.cpp, line 671]
nsJVMManager::MaybeStartupLiveConnect
[d:\builds\seamonkey\mozilla\modules\oji\src\nsJVMManager.cpp, line 902]
nsJVMManager::StartupLiveConnect
[d:\builds\seamonkey\mozilla\modules\oji\src\nsJVMManager.h, line 144]
nsJSEnvironment::Init
[d:\builds\seamonkey\mozilla\dom\src\base\nsJSEnvironment.cpp, line 1685]
NS_CreateScriptContext
[d:\builds\seamonkey\mozilla\dom\src\base\nsJSEnvironment.cpp, line 1727]
nsDOMSOFactory::NewScriptContext
[d:\builds\seamonkey\mozilla\dom\src\build\nsDOMFactory.cpp, line 154]
nsDocShell::EnsureScriptEnvironment
[d:\builds\seamonkey\mozilla\docshell\base\nsDocShell.cpp, line 6106]
nsWebShell::GetInterface
[d:\builds\seamonkey\mozilla\docshell\base\nsWebShell.cpp, line 296]
nsGetInterface::operator()
[d:\builds\seamonkey\mozilla\xpcom\base\nsIInterfaceRequestor.cpp, line 55]
nsCOMPtr_base::assign_from_helper
[d:\builds\seamonkey\mozilla\xpcom\glue\nsCOMPtr.cpp, line 81]
nsAppShellService::GetHiddenWindowAndJSContext
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 784]
nsAppShellService::SetXPConnectSafeContext
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 205]
nsAppShellService::CreateHiddenWindow
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 441]
main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1430]
main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1809]
WinMain [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1827]
WinMainCRTStartup()
KERNEL32.DLL + 0x17d08 (0x77e97d08) 
-> Plugins
Assignee: Matti → beppe
Status: UNCONFIRMED → NEW
Component: Browser-General → Plug-ins
Ever confirmed: true
Keywords: stackwanted
QA Contact: imajes-qa → shrir
Reporter: Can you copy paste and attach here the output from about:plugins? Thanks!
Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPOJI610.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-vm Java Virtual Machine for Netscape 6.x Yes

Mozilla Default Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npnul32.dll
Default Plug-in

Mime Type Description Suffixes Enabled
* Mozilla Default Plug-in (*.*) * Yes

Shockwave Flash

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPSWF32.dll
Shockwave Flash 6.0 r29

Mime Type Description Suffixes Enabled
application/x-shockwave-flash Macromedia Flash movie (*.swf) swf Yes
application/futuresplash FutureSplash movie (*.spl) spl Yes

Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPJava11.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-applet;version=1.1.1 Java Applet Yes
application/x-java-bean;version=1.1.1 JavaBeans Yes
application/x-java-applet;version=1.1 Java Applet Yes
application/x-java-bean;version=1.1 JavaBeans Yes
application/x-java-applet Java Applet Yes
application/x-java-bean JavaBeans Yes

Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPJava12.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-applet;version=1.2 Java Applet Yes
application/x-java-bean;version=1.2 JavaBeans Yes
application/x-java-applet;version=1.1.3 Java Applet Yes
application/x-java-bean;version=1.1.3 JavaBeans Yes
application/x-java-applet;version=1.1.2 Java Applet Yes
application/x-java-bean;version=1.1.2 JavaBeans Yes

Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPJava13.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-applet;version=1.3.1 Java Applet Yes
application/x-java-bean;version=1.3.1 JavaBeans Yes
application/x-java-applet;version=1.4 Java Applet Yes
application/x-java-bean;version=1.4 JavaBeans Yes

Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPJava32.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-applet;version=1.3 Java Applet Yes
application/x-java-bean;version=1.3 JavaBeans Yes
application/x-java-applet;version=1.2.2 Java Applet Yes
application/x-java-bean;version=1.2.2 JavaBeans Yes
application/x-java-applet;version=1.2.1 Java Applet Yes
application/x-java-bean;version=1.2.1 JavaBeans Yes

Java Plug-in

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPJPI140.dll
Java Plug-in 1.4.0 for Netscape Navigator (DLL Helper)

Mime Type Description Suffixes Enabled
application/x-java-applet;jpi-version=1.4 Java Applet Yes
application/x-java-bean;jpi-version=1.4 JavaBeans Yes

GIB ActiveX Object

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPchargitplug.dll
GIB ActiveX Object

Mime Type Description Suffixes Enabled
application/x-gib-chargitplug Yes

QuickTime Plug-in 5.0.2

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npqtplugin5.dll
The QuickTime Plugin allows you to view a wide variety of multimedia content in
Web pages. For more information, visit the QuickTime Web site.

Mime Type Description Suffixes Enabled
image/x-quicktime QuickTime Image File (*.qtif,*.qti) qtif,qti Yes
image/x-sgi SGI image file (*.sgi,*.rgb) sgi,rgb Yes

QuickTime Plug-in 5.0.2

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npqtplugin4.dll
The QuickTime Plugin allows you to view a wide variety of multimedia content in
Web pages. For more information, visit the QuickTime Web site.

Mime Type Description Suffixes Enabled
audio/x-mpeg MPEG audio file (*.mpeg,*.mpg,*.m1s,*.m1a,*.mp2,*.mpm,*.mpa)
mpeg,mpg,m1s,m1a,mp2,mpm,mpa Yes
image/x-macpaint MacPaint image file (*.pntg,*.pnt,*.mac) pntg,pnt,mac Yes
image/pict PICT image file (*.pict,*.pic,*.pct) pict,pic,pct Yes
image/x-pict PICT image file (*.pict,*.pic,*.pct) pict,pic,pct Yes
image/png PNG image file (*.png) png Yes
image/x-png PNG image file (*.png) png Yes

QuickTime Plug-in 5.0.2

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npqtplugin3.dll
The QuickTime Plugin allows you to view a wide variety of multimedia content in
Web pages. For more information, visit the QuickTime Web site.

Mime Type Description Suffixes Enabled
video/x-mpeg MPEG media file
(*.mpeg,*.mpg,*.m1s,*.m1v,*.m1a,*.m75,*.m15,*.mp2,*.mpm,*.mpv,*.mpa)
mpeg,mpg,m1s,m1v,m1a,m75,m15,mp2,mpm,mpv,mpa Yes
video/mpeg MPEG media file
(*.mpeg,*.mpg,*.m1s,*.m1v,*.m1a,*.m75,*.m15,*.mp2,*.mpm,*.mpv,*.mpa)
mpeg,mpg,m1s,m1v,m1a,m75,m15,mp2,mpm,mpv,mpa Yes
audio/mpeg MPEG audio file (*.mpeg,*.mpg,*.m1s,*.m1a,*.mp2,*.mpm,*.mpa)
mpeg,mpg,m1s,m1a,mp2,mpm,mpa Yes

QuickTime Plug-in 5.0.2

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npqtplugin2.dll
The QuickTime Plugin allows you to view a wide variety of multimedia content in
Web pages. For more information, visit the QuickTime Web site.

Mime Type Description Suffixes Enabled
audio/x-aiff AIFF audio file (*.aiff,*.aif,*.aifc) aiff,aif,aifc Yes
audio/basic uLaw/AU audio file (*.au,*.snd,*.ulw) au,snd,ulw Yes
audio/mid MIDI file (*.mid,*.midi,*.smf,*.kar) mid,midi,smf,kar Yes
audio/x-midi MIDI file (*.mid,*.midi,*.smf,*.kar) mid,midi,smf,kar Yes
audio/midi MIDI file (*.mid,*.midi,*.smf,*.kar) mid,midi,smf,kar Yes
audio/vnd.qcelp QUALCOMM PureVoice audio file (*.qcp) qcp Yes
audio/x-gsm GSM audio file (*.gsm) gsm Yes

QuickTime Plug-in 5.0.2

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\npqtplugin.dll
The QuickTime Plugin allows you to view a wide variety of multimedia content in
Web pages. For more information, visit the QuickTime Web site.

Mime Type Description Suffixes Enabled
application/sdp SDP stream descriptor file (*.sdp) sdp Yes
application/x-sdp SDP stream descriptor file (*.sdp) sdp Yes
application/x-rtsp RTSP stream descriptor file (*.rtsp,*.rts) rtsp,rts Yes
video/quicktime QuickTime Movie (*.mov,*.qt) mov,qt Yes
video/flc AutoDesk Animator (FLC) file (*.flc,*.fli) flc,fli Yes
audio/aiff AIFF audio file (*.aiff,*.aif,*.aifc) aiff,aif,aifc Yes

Shockwave for Director

    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\np32dsw.dll
Macromedia Shockwave for Director Netscape plug-in, version 8.5

Mime Type Description Suffixes Enabled
application/x-director Shockwave Movie (*.dir;*.dxr;*.dcr) dir,dxr,dcr Yes

Microsoft (R) DRM

    File name: C:\Program Files\Windows Media Player\npdrmv2.dll
Network Object Plugin

Mime Type Description Suffixes Enabled
application/x-drm-v2 Network Interface Plugin (*.nip) nip Yes

Windows Media Player Plug-in Dynamic Link Library

    File name: C:\Program Files\Windows Media Player\npdsplay.dll
Npdsplay dll

Mime Type Description Suffixes Enabled
application/asx Media Files * Yes
video/x-ms-asf-plugin Media Files * Yes
application/x-mplayer2 Media Files * Yes
video/x-ms-asf Media Files (*.asf,*.asx) asf,asx,* Yes
video/x-ms-wm Media Files (*.wm) wm,* Yes
audio/x-ms-wma Media Files (*.wma) wma,* Yes
audio/x-ms-wax Media Files (*.wax) wax,* Yes
video/x-ms-wmv Media Files (*.wmv) wmv,* Yes
video/x-ms-wvx Media Files (*.wvx) wvx,* Yes

Microsoft® Windows Media Services

    File name: C:\Program Files\Windows Media Player\npwmsdrm.dll
Windows Multimedia Services DRM Store Plug-In

Mime Type Description Suffixes Enabled
application/x-drm DRM File (*.dnp) dnp Yes

Thanks!

Okay, this looks suspicious:
> GIB ActiveX Object
>
>    File name: C:\PROGRA~1\MOZILLA.ORG\MOZILLA\plugins\NPchargitplug.dll
> GIB ActiveX Object
>
>Mime Type Description Suffixes Enabled
>application/x-gib-chargitplug Yes

Reporter, if NPchargitplug.dll is renamed to 00NPchargitplug.dll, does the
problem reproduce?
AS suggested, renaming NPchargitplug.dll to OONPchargitplug.dll stops the problem.
Ah ha! Do you know where I can get this plugin to test with? If that file is
under 1 MB (maybe compress with zip) could you attach to this bug. Thanks!
Summary: crashes alternatly opening from Outlook and desktop → GIB ActiveX Object (NPchargitplug.dll) may crash in AddPluginInfoToRegistry
pushing out to 1.2 milestone
Assignee: beppe → peterl
Priority: -- → P3
Target Milestone: --- → mozilla1.2beta
Severity: critical → normal
adding dougt as an fyi
Whiteboard: [PL2:NA]
Target Milestone: mozilla1.2beta → mozilla1.0.2
Target Milestone: mozilla1.0.2 → Future
PeterL, Beppe, DougT,
This stack (comment #3) is showing up as a topcrasher in the N7.0 final release
(as well as a handful of crashes on the Trunk prior to 8/26). We have 88 crashes
currently in the final release. Seems like a higher priority and a target
milestone would be good. It looks like comments #8-10 might lead to a
reproducible case.

(cf. bug 111383 for a similar problem/stack releated to the HiWire plugin.)
Severity: normal → critical
Keywords: topcrash
Summary: GIB ActiveX Object (NPchargitplug.dll) may crash in AddPluginInfoToRegistry → GIB ActiveX Object (NPchargitplug.dll) may crash in [@ AddPluginInfoToRegistry] N700, Trunk
I think the code around this crash has completly changed in the trunk so it's
likely the crash is not happening there anymore. Is this still important to look
at for the branch?
We need to find out what that particular plug-in is doing, and find out the
vendor. Once we trace the issue down we need to hook with the vendor to see if
they can help provide a resolution (if applicable). We need to understand why
the plug-in is making us crash and nail that down so if another vendor does the
same thing, we will know how to prevent it. Peter, can you capture the
event/function that is causing the crash?
Attached patch patch v.1Splinter Review
This crash happens only on the 1.0 branch. The trunk is fine. The crash is
caused because this plugin does not register for any file extensions and we're
not checking for null in our code [on the branch]. This patch does a null check
but are checkins still being accepted for the 1.0 branch?
Comment on attachment 97775 [details] [diff] [review]
patch v.1

r=av
Attachment #97775 - Flags: review+
Target Milestone: Future → mozilla1.2alpha
Comment on attachment 97775 [details] [diff] [review]
patch v.1

sr=beard
Attachment #97775 - Flags: superreview+
Let's get this approved for landing on the trunk. Land it. Let it bake for a
couple of days, then request for branch checkin approvals from the EDT and Drivers.
Whiteboard: [PL2:NA] → [PL2:NA] [adt2] [ETA 09/12]
trunk has different registry code and there is no such crash on trunk
This can not land on the trunk as that code is no longer there. This problem has
already been fixed by re-working that code. This patch is only for the branch.
Status: NEW → ASSIGNED
Summary: GIB ActiveX Object (NPchargitplug.dll) may crash in [@ AddPluginInfoToRegistry] N700, Trunk → browser may crash on startup if a plugin does not register any file extensions: GIB ActiveX Object (NPchargitplug.dll) may crash in [@ AddPluginInfoToRegistry] N700, branch
Target Milestone: mozilla1.2alpha → mozilla1.0.2
Ah, thanks for the clarification. Can we get a private test build, based on the
1.0 branch to shrir, so he can verify the patch as fixing this issue, as well as
checking for any potential regressions?
I think for the branch it better to lang flat file registry, which is on the
trunk for awhile, it looks quiet stable and it eliminates registry bloat
problem, and increases the performance.
are you talking about just for plugins, or all of 48888?
well, I'm talking about plugins, I think you can say the same for 48888:)
Keywords: nsbeta1+
Comment on attachment 97775 [details] [diff] [review]
patch v.1

a=rjesup@wgate.com.  After it bakes, request 1.0 branch approval
Attachment #97775 - Flags: approval+
Sorry.  Approved for branch, not trunk.  I didn't read the bug well enough. 
Change mozilla1.0.2+ to fixed1.0.2 when checked in
patch in branch:
/cvsroot/mozilla/modules/plugin/base/src/nsPluginHostImpl.cpp,v
new revision: 1.372.2.26; previous revision: 1.372.2.25
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
posthumus edt1.0.2+.

shrir: can you pls verify this as fixed on the branch, then replace
"fixed1.0.2", with "verified1.0.2". thanks!
Keywords: edt1.0.2edt1.0.2+
verified fixed on 0919 1.0 build.does not crash anymore.
Status: RESOLVED → VERIFIED
Crash Signature: [@ AddPluginInfoToRegistry]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: