Fix for topcrash bug 146538 browser may crash on startup if a plugin does not register any file extensions: GIB ActiveX Object (NPchargitplug.dll) may crash in [@ AddPluginInfoToRegistry] N700, branch r=av sr=beard a=rjesup@wgate.com